# bad_igor_bot

./: Cargo.toml  LICENSE  README.md
src/: main.rs
