[package]
name = "bad_igor_bot"
version = "0.1.0"
authors = ["Aleksandr Pak <alekspak@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
telegram-bot = "0.6"
futures = "0.1.28"
tokio-core = "0.1.17"
log = "0.4.8"
simple_logger = "1.3.0"
