[package]
name = "bad_igor_bot"
version = "0.1.0"
authors = ["Aleksandr Pak <alekspak@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simple_logger = "1.3.0"
telegram-bot = { git = "https://github.com/telegram-rs/telegram-bot" }
futures = "0.1.28"
tokio = "0.2.0-alpha"
log = "0.4.8"
